@@ -38,6 +38,7 @@ use NewsExtractor::SiteSpecificExtractor::www_twreporter_org;
 use NewsExtractor::SiteSpecificExtractor::new_ctv_com_tw;
 use NewsExtractor::SiteSpecificExtractor::hk_crntt_com;
 use NewsExtractor::SiteSpecificExtractor::hk_on_cc;
+use NewsExtractor::SiteSpecificExtractor::www_xinhuanet_com;
 use NewsExtractor::SiteSpecificExtractor::UDN;
 use NewsExtractor::SiteSpecificExtractor::ETtoday;
 use NewsExtractor::SiteSpecificExtractor::ChinaTimes;
@@ -94,6 +95,7 @@ use constant {
         'new.ctv.com.tw' => 'NewsExtractor::SiteSpecificExtractor::new_ctv_com_tw',
         'hk.crntt.com' => 'NewsExtractor::SiteSpecificExtractor::hk_crntt_com',
         'hk.on.cc' => 'NewsExtractor::SiteSpecificExtractor::hk_on_cc',
+        'www.xinhuanet.com' => 'NewsExtractor::SiteSpecificExtractor::www_xinhuanet_com',
     },
     CSSRuleSetByHost => {
         'www.taiwannews.com.tw' => {
