@@ -237,3 +237,4 @@ https://turnnewsapp.com/global/politics/181551.html
 https://turnnewsapp.com/global/politics/181497.html
 https://www.setn.com/News.aspx?NewsID=765598
 https://www.twreporter.org/a/hong-kong-national-security-law-goes-into-effect
+http://www.xinhuanet.com/politics/2020-07/07/c_1126208394.htm
