@@ -1,3 +1,4 @@
+  - Add a site-specific extractor for www.xinhuanet.com
   - Add a site-specific extractor for hk.on.cc
 
 v0.27.0 2020-07-06T22:17:57+0800
